update umami link

--- a/spacemule/public/links/index.html
+++ b/spacemule/public/links/index.html
@@ -6,16 +6,16 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Zahava   Yalla, Let&amp;rsquo;s Eat!
+<meta name="description" content="Zahava Yalla, Let&amp;rsquo;s Eat!
 Zahava&amp;rsquo;s recipe blog.
-  Very Israeli Translations
+Very Israeli Translations
 The finest street sign translations in the Middle East.
-  Zahava is Cool
+Zahava is Cool
 An applied tautology.
-  Country Music   Dollar Country
+Country Music Dollar Country
 One of the best sources for weird, good, forgotten, and otherwise amazing country music. Brought to you by Frank the Drifter.
-  Cocaine &amp;amp; Rhinestones
-An amazing podcast about the history of country music by Tyler Mahan Coe." />
+Cocaine &amp;amp; Rhinestones
+An amazing podcast about the history of country music by Tyler Mahan Coe. Feel free to skip the intros in the second season." />
 <meta name="keywords" content="linux opensuse podman containers kubernetes k8s" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="https://spacemule.net/links/" />
@@ -50,16 +50,16 @@ An amazing podcast about the history of country music by Tyler Mahan Coe." />
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Links">
-<meta property="og:description" content="Zahava   Yalla, Let&amp;rsquo;s Eat!
+<meta property="og:description" content="Zahava Yalla, Let&amp;rsquo;s Eat!
 Zahava&amp;rsquo;s recipe blog.
-  Very Israeli Translations
+Very Israeli Translations
 The finest street sign translations in the Middle East.
-  Zahava is Cool
+Zahava is Cool
 An applied tautology.
-  Country Music   Dollar Country
+Country Music Dollar Country
 One of the best sources for weird, good, forgotten, and otherwise amazing country music. Brought to you by Frank the Drifter.
-  Cocaine &amp;amp; Rhinestones
-An amazing podcast about the history of country music by Tyler Mahan Coe." />
+Cocaine &amp;amp; Rhinestones
+An amazing podcast about the history of country music by Tyler Mahan Coe. Feel free to skip the intros in the second season." />
 <meta property="og:url" content="https://spacemule.net/links/" />
 <meta property="og:site_name" content="spacemule.net" />
 
@@ -80,7 +80,7 @@ An amazing podcast about the history of country music by Tyler Mahan Coe." />
 
 
 
-<script async defer data-website-id="704fd120-20c5-41fe-83b4-e2b6c2cd7424" src="https://lytics.spacemule.net/umami.js"></script>
+<script async defer data-website-id="78b01028-e8a0-494b-b941-3276e25615d5" src="https://lytics.spacemule.net/umami.js"></script>
 
 
 </head>
