--- a/zahava/index.html
+++ b/zahava/index.html
@@ -18,7 +18,12 @@
   <body>
     <header style="font-size:50px;background-color:tomato;color:blue;text-align:center;">ZAHAVA IS COOL</header>
     <p style=font-size:30px;color:yellow;text-align:center;">HELLO Canada. How did you find this site? Contact info at spacemule.net</p>
-    <main><img src="./zahava-is-cool.webp" alt="Zahava is cool.net"/></main>
+    <main>
+      <img src="./zahava-is-cool.webp" alt="Zahava is cool.net" style='margin-left: 10px; margin-right: 10px;'/>
+      <a href="./zogsteroid.webp">
+        <img src="./zogsteroid.webp" alt="Zogsteroids!" style='margin-left: 10px; margin-right: 10px;'/>
+      </a>
+    </main>
     <footer style="font-size:30px;background-color:blue;color:tomato;text-align:center;">She is cool.com</footer>
   </body>
 </html>
