--- a/spacemule/public/links/index.html
+++ b/spacemule/public/links/index.html
@@ -21,6 +21,9 @@ An amazing podcast about the history of country music by Tyler Mahan Coe. Feel f
 <link rel="canonical" href="https://spacemule.net/links/" />
 
 
+  
+
+
 
 
 <link rel="stylesheet" href="https://spacemule.net/assets/style.css">
@@ -34,7 +37,7 @@ An amazing podcast about the history of country music by Tyler Mahan Coe. Feel f
 
 <link rel="apple-touch-icon" href="https://spacemule.net/img/apple-touch-icon-192x192.png">
 
-  <link rel="shortcut icon" href="https://spacemule.net/../favicon.ico">
+  <link rel="shortcut icon" href="https://spacemule.net/favicon.ico">
 
 
 
@@ -64,7 +67,7 @@ An amazing podcast about the history of country music by Tyler Mahan Coe. Feel f
 <meta property="og:site_name" content="spacemule.net" />
 
   
-    <meta property="og:image" content="https://spacemule.net/../favicon.ico">
+    <meta property="og:image" content="https://spacemule.net/favicon.ico">
   
 
 <meta property="og:image:width" content="2048">
@@ -80,7 +83,7 @@ An amazing podcast about the history of country music by Tyler Mahan Coe. Feel f
 
 
 
-<script async defer data-website-id="78b01028-e8a0-494b-b941-3276e25615d5" src="https://lytics.spacemule.net/umami.js"></script>
+<script defer src="https://lytics.spacemule.net/script.js" data-website-id="78b01028-e8a0-494b-b941-3276e25615d5"></script>
 
 
 </head>
@@ -264,7 +267,7 @@ An amazing podcast about the history of country music by Tyler Mahan Coe. Feel f
   <div class="footer__inner">
     
       <div class="copyright">
-        <span>© 2023 Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>© 2024 Powered by <a href="http://gohugo.io">Hugo</a></span>
     
         <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
