--- a/zahava/index.html
+++ b/zahava/index.html
@@ -13,7 +13,7 @@
         height: auto:
         }
     </style>
-      <script async defer data-website-id="2f559776-28ed-41fe-86f4-88b0d1327889" src="https://lytics.spacemule.net/umami.js"></script>
+    <script defer src="https://lytics.spacemule.net/script.js" data-website-id="2f559776-28ed-41fe-86f4-88b0d1327889"></script>
   </head>
   <body>
     <header style="font-size:50px;background-color:tomato;color:blue;text-align:center;">ZAHAVA IS COOL</header>
