--- a/spacemule/public/about/index.html
+++ b/spacemule/public/about/index.html
@@ -16,6 +16,9 @@ You may contact me at an email composed of my first name &amp;lsquo;@&amp;rsquo;
 <link rel="canonical" href="https://spacemule.net/about/" />
 
 
+  
+
+
 
 
 <link rel="stylesheet" href="https://spacemule.net/assets/style.css">
@@ -29,7 +32,7 @@ You may contact me at an email composed of my first name &amp;lsquo;@&amp;rsquo;
 
 <link rel="apple-touch-icon" href="https://spacemule.net/img/apple-touch-icon-192x192.png">
 
-  <link rel="shortcut icon" href="https://spacemule.net/../favicon.ico">
+  <link rel="shortcut icon" href="https://spacemule.net/favicon.ico">
 
 
 
@@ -54,7 +57,7 @@ You may contact me at an email composed of my first name &amp;lsquo;@&amp;rsquo;
 <meta property="og:site_name" content="spacemule.net" />
 
   
-    <meta property="og:image" content="https://spacemule.net/../favicon.ico">
+    <meta property="og:image" content="https://spacemule.net/favicon.ico">
   
 
 <meta property="og:image:width" content="2048">
@@ -70,7 +73,7 @@ You may contact me at an email composed of my first name &amp;lsquo;@&amp;rsquo;
 
 
 
-<script async defer data-website-id="78b01028-e8a0-494b-b941-3276e25615d5" src="https://lytics.spacemule.net/umami.js"></script>
+<script defer src="https://lytics.spacemule.net/script.js" data-website-id="78b01028-e8a0-494b-b941-3276e25615d5"></script>
 
 
 </head>
@@ -234,7 +237,7 @@ I&rsquo;m Noah. I was born a yankee, raised a Texan, and now I&rsquo;m  Israeli.
   <div class="footer__inner">
     
       <div class="copyright">
-        <span>© 2023 Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>© 2024 Powered by <a href="http://gohugo.io">Hugo</a></span>
     
         <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
